--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -166,6 +166,26 @@ button.mark-button,
 button.edit-button {
   margin-left: 6px;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 @media screen and (max-width: 1000px) {
   .search-input {
     width: 200px;
