--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -38,14 +38,20 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .hidden {
   display: none;
 }
-.book-shelf {
-  max-height: 350px;
-  height: 350px;
+#book-shelf {
+  max-height: 360px;
+  height: 360px;
   overflow-y: auto;
 }
+
+#book-shelf.no-item {
+  overflow: hidden;
+}
+
 #book-list > p {
   text-align: center;
   vertical-align: middle;
@@ -160,12 +166,6 @@ label > input[type="checkbox"] {
   font-size: 20px;
   color: #4b5563;
   line-height: 28px;
-}
-
-#book-list.no-book {
-  display: grid;
-  place-items: center;
-  height: 100%;
 }
 
 button.mark-button,
