--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -250,7 +250,7 @@ button.edit-button {
     width: 92%;
   }
   input[type="search"] {
-    width: 70%;
+    width: 90%;
   }
   .btn-tambah {
     width: 100%;
@@ -266,7 +266,7 @@ button.edit-button {
     font-weight: 400;
   }
   input[type="search"] {
-    width: 210px;
+    width: 90%;
     font-size: 10pt;
   }
   .switch-button-container {
@@ -290,5 +290,11 @@ button.edit-button {
   button.mark-button {
     margin-left: 0px;
     margin-top: 3px;
+  }
+  #book-shelf {
+    height: 230px;
+  }
+  #book-list.no-book {
+    font-size: 10pt;
   }
 }
